--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Stylus</title>
+		<title>para peluchitoasdasdasdasd</title>
 		<script type="text/javascript" src="http://www.sodimac.com.pe/static/script/common/jquery-1.7.2.min.js"></script>
 		
 		<!--<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>-->
